src/index.css
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}


.app{
  display:flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.intro{
  border:2px solid black;
  background-color: black;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.filler{
  position: fixed;
  top:0;
  background-color: black;
  height: 100vh;
  width: 100vw;
  opacity: 70%;
  z-index: 2;
}
.intro-modal{
  position:fixed;
  background-color: white;
  text-align:center;
  width: 600px;
  top: 5%; 
  padding: 20px;
  display:flex;
  flex-direction: column;
  align-items: center;
  gap: 32px;
  z-index: 2;
  border-radius: 4%;
}

.intro-modal > h2 {
  margin:0;
}

.intro-posters{
  display: flex;
  justify-content: space-evenly;
  gap: 32px;
}

.intro-posters > img{
  width: 23%;
  height:auto;
}

.start-button, 
.submit-score,
.try-again{
  padding: 10px 20px;
  font-size:2rem;
  border-radius: 30px;
  cursor: pointer;
  color:white;
  background-color: black;
  transition: color 100ms ease-in-out, background-color 100ms ease-in-out;
}

.start-button:hover, 
.submit-score:hover,
.try-again:hover{
  background-color: white;
  color:black;
}

.start-button:active, 
.submit-score:active,
.try-again:active{
  background-color: rgb(230, 230, 230);
}

.hitbox{
  position:absolute;
  height: 10vw;
  width: 10vw;
  border:4px solid rgb(255, 0, 0);
  border-radius: 50%;
  display: flex;
  align-items: center;
  justify-content: center;
  z-index: 0;
}

.hitbox > h3 {
  color:white;
  color:black;
  background-color: white;
  padding: 2px 10px;
  opacity: 70%;
  font-size: 1em;
}


header{
  position:fixed;
  text-align: center;
  top:0;
  width: 100%;
  z-index: 1;
}

.top-header{
  color:white;
  padding: 20px;
  background-color: rgb(34, 34, 44);
  display:flex;
  justify-content: center;
  align-items: center;
  gap: 100px;
}

.timer > h1 {
  color: white;
  background:none;
  font-size: 3rem;
}

.avatars{
  display: flex;
  gap: 32px;
}

.avatar{
  transition: opacity 100ms ease-in;
}

.avatar > img{
  height: 100px;
  width:100px;
  border-radius: 100px;
  border:none;
}

.avatar > p{
  margin:0;
}

.leaderboards{
  width: 70%;
  margin:auto;
  display:flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap :32px;
}

.score-form{
  text-align: center;
  display:flex;
  flex-direction: column;
  gap: 20px;
}

.score-form > h1{
  margin-bottom:0;
}

.score-form > input{
  text-align: center;
  padding: 5px 10px;
  font-size: 2rem;
}

.player-scores{
  height:350px;
  overflow: auto;
  width: 70%;
  margin:0 auto;
}

table{
  margin:auto;
  width:95%;
  table-layout: fixed;
  border-collapse: collapse;
  border:2px solid black;
}

th, td{
  border-bottom:2px solid black;
  font-size: 2rem;
  text-align: center;
  font-weight: bold;
}

